--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -8,12 +8,12 @@ jobs:
     name: Generate repository
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: main
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          using: 'node20'
       - name: Run generator
         run: node index.js
       - name: Commit changes
