--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          check-latest: true
       - name: Run generator
         run: node index.js
       - name: Commit changes
