--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,4 @@
-name: Generate and Web
+name: Generate and Deploy
 
 on:
   schedule:
@@ -24,38 +24,44 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout
+      - name: Checkout with full history
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Setup Node.js
+        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
         uses: actions/setup-node@v4
         with:
           node-version: 20
           check-latest: true
       
-      - name: Run generator (если есть файл index.js)
+      - name: Run generator
+        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+        run: node index.js
+      
+      - name: Check for changes
+        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+        id: check-changes
         run: |
-          if [ -f "index.js" ]; then
-            node index.js
+          git status --porcelain
+          if git status --porcelain | grep -q "."; then
+            echo "has-changes=true" >> $GITHUB_OUTPUT
+            echo "Changes detected"
+          else
+            echo "has-changes=false" >> $GITHUB_OUTPUT
+            echo "No changes detected"
           fi
       
       - name: Commit generated changes
-        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && steps.check-changes.outputs.has-changes == 'true'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          
-          # Проверяем, есть ли изменения
-          if git status --porcelain | grep -q "."; then
-            echo "Changes detected, committing..."
-            git add -A
-            git commit -m "Auto-generated data update - $(date)"
-            git push origin main
-          else
-            echo "No changes to commit"
-          fi
+          git add -A
+          git commit -m "Auto-generated data update - $(date +'%Y-%m-%d %H:%M:%S')"
+          git push
       
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -63,7 +69,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Загружаем весь репозиторий для деплоя
           path: '.'
       
       - name: Deploy to GitHub Pages
