--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,10 +30,15 @@ jobs:
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
+
           git add repo.json
-          git diff --cached --quiet && exit 0
-          git commit -m "Update repo.json"
-          git push
+
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update repo.json"
+            git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+          fi
 
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v5
