--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,12 +1,9 @@
 name: Web Repo
 
 on:
-  workflow_run:
-    workflows: ["Generate Repo"]
-    types:
-      - completed
-
-  workflow_dispatch:
+  push:
+    paths:
+      - 'repo.json'
 
 permissions:
   contents: read
@@ -26,12 +23,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: '.'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
