--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,8 +2,9 @@ name: Web Repo
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+
+  workflow_dispatch:
 
 permissions:
   contents: read
